# spotify-cli

./: .gitignore  Cargo.toml  README.md  app.rs  auth.rs  config.rs  events.rs  main.rs  spotify.rs  ui.rs
src/: app.rs  ui.rs
