[package]
name = "spotify-cli"
version = "0.1.0"
edition = "2021"
authors = ["eng-jomanoel"]
description = "A Spotify TUI client for the terminal"
license = "MIT"

[[bin]]
name = "spotify-cli"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tokio-util = "0.7"
